--- a/Proyecto Arzo/Validaciones/templates/Validaciones/homepage.html
+++ b/Proyecto Arzo/Validaciones/templates/Validaciones/homepage.html
@@ -59,10 +59,10 @@
 
 
 
-    <table class="protocol-table" id="protocol-table">
+<table class="protocol-table" id="protocol-table">
         <thead>
             <tr>
-                <th>Nombres denunciantes</th>
+                <th>Involucrados</th>
                 <th>Curso(s)</th>
                 <th>Protocolo activado</th>
                 <th>Estado</th>
@@ -78,8 +78,14 @@
                     data-protocolo-id="{{ p.id }}" 
                     data-url-ver="{% url 'protocolos:ver_protocolo' p.id %}" 
                     data-url-descargar="{% url 'protocolos:descargar_protocolo_pdf' p.id %}">
-                    <td>{{ p.ficha_denuncia.nombre_denunciante|default:"N/A" }}</td>
-                    <td>{{ p.ficha_denuncia.curso_denunciado|default:"N/A" }}</td>
+                    
+                    <td title="{{ p.resumen_involucrados|default:'N/A' }}">
+                        {{ p.primer_involucrado|default:"N/A" }}
+                    </td>
+                    <td title="{{ p.resumen_cursos|default:'N/A' }}">
+                        {{ p.primer_curso|default:"N/A" }}
+                    </td>
+                    
                     <td>
                         {% if p.tipo.nombre %}
                             {{ p.tipo.nombre }}
