--- a/Proyecto Arzo/Validaciones/templates/Validaciones/homepage.html
+++ b/Proyecto Arzo/Validaciones/templates/Validaciones/homepage.html
@@ -29,7 +29,7 @@
                 <i class="fa-solid fa-bars"></i>
             </button>
             <div class="hamburger-opciones">
-                <a href="{% url 'Validaciones:Almacen' %}">Almacen</a>
+                <a href="{% url 'Validaciones:Almacen' %}">Almacén</a>
                 <a href="{% url 'Validaciones:login' %}">Cerrar sesión</a>
             </div>
         </div>
